view: embedded API, video player
use videojs player

custom theme

minimal react wrapper, we don't need to interact with the player from the rest of the view.

reponsive sizing

also provides server-side rendering as html5 video tag

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -161,6 +161,7 @@
 @import progressive
 @import previews
 @import uberadmin
+@import video-js
 
 /*-----------------------------------------
  *-----------------------------------------
@@ -223,3 +224,15 @@ img, img.ui-thumbnail-image
   #ui-resources-preview
     height: 300px
     overflow: auto
+
+
+// embedded view
+body[data-r="media_entries"][data-a="embedded"]
+  background: transparent
+  overflow: hidden
+  top: 0
+  margin: 0
+  padding: 0
+  height: 100%
+  width: 100%
+  min-width: initial
