--- a/app/assets/stylesheets/layout/_layout.sass
+++ b/app/assets/stylesheets/layout/_layout.sass
@@ -2,11 +2,12 @@
  *  BODY
  *-----------------------------------------
 
-html,
 body
-  background: $body-background
   height: 100%
   min-width: 980px
+
+body
+  background: $body-background
 
 .app-body
   background: $body-background
