view: MediaEntryShow: oEmbed discovery links
in html <head> of page

--- a/app/views/media_entries/_show/_base_tmp_react.haml
+++ b/app/views/media_entries/_show/_base_tmp_react.haml
@@ -1,6 +1,8 @@
 -# = from template: 'layouts/app_resource'
 
 :ruby
+  render('media_entries/_show/head_meta_tags')
+
   unless @get.published?
     content_for(:top_notice) { render('media_entries/_show/unpublished_header') }
   end
