--- a/app/views/my/dashboard.haml
+++ b/app/views/my/dashboard.haml
@@ -22,8 +22,9 @@
         = combo('resources-header', title: section[:title],
                   link: { text: t(:resources_header_show_all),
                           href: my_dashboard_section_path(section[:id])})
-        = render partial: "my/section_#{section[:partial]}",
-                 locals: { get: @get, section: section, show_pagination_nav: false }
+        - if section[:partial].present?
+          = render partial: "my/section_#{section[:partial]}",
+                   locals: { get: @get, section: section, show_pagination_nav: false }
 
   .ui-container.pal
     - if dashboard_content
