fix: selection shadow for collections

--- a/app/assets/stylesheets/combos/_ui-resources-tiles.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-tiles.sass
@@ -22,7 +22,7 @@
   position: relative
 
   .ui-resources-page-items
-    +column-gap($space-m)
+    +column-gap($space-s)
     +column-width(300px)
     margin: 0 $space-x
     padding: $space-s 0 0
@@ -31,7 +31,7 @@
     +box-sizing(border-box)
     display: inline-block
     margin-bottom: $space-m
-    padding: $space-x
+    padding: $space-s
 
     -webkit-column-span: 1
     -moz-column-span: 1
