--- a/app/assets/stylesheets/_video-js.scss
+++ b/app/assets/stylesheets/_video-js.scss
@@ -7,6 +7,10 @@
 
 @import '../../../node_modules/video.js/dist/video-js';
 
+// defaults:
+.video-js { width: 300px; height: 150px; }
+.vjs-fluid { padding-top: 56.25% }
+
 .no-js .video-js .vjs-big-play-button { display: none }
 
 $brand-color: $main-color;
