--- a/app/assets/stylesheets/_video-js.scss
+++ b/app/assets/stylesheets/_video-js.scss
@@ -7,9 +7,35 @@
 
 @import '../../../node_modules/video.js/dist/video-js';
 
-// defaults:
+// default sizing:
 .video-js { width: 300px; height: 150px; }
-.vjs-fluid { padding-top: 56.25% }
+.vjs-fluid { padding-top: 56.25% } // 16:9 aspect ratio
+
+// default fullscreen sizing:
+// see <https://docs.brightcove.com/en/perform/brightcove-player/guides/sizing-the-player.html#fullscreen>
+body.vjs-full-window {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+  }
+  .video-js.vjs-fullscreen {
+    position: fixed;
+    overflow: hidden;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 100% !important;
+    height: 100% !important;
+  }
+  .video-js:-webkit-full-screen {
+    width: 100% !important;
+    height: 100% !important;
+  }
+  .video-js.vjs-fullscreen.vjs-user-inactive {
+    cursor: none;
+  }
 
 .no-js .video-js .vjs-big-play-button { display: none }
 
