feat: admin-mode/uberadmin
- simple but obvious styles (without blinking)
- checked all cases where we do `skip_auth…`
- previously checked that any auth that involves the current user is handled via pundit
- added custom implementation of `authorize` and `policy` methods that transparently handle uberadmin mode
- reflect uberadmin_mode in current_user.admin instance var

--- a/app/ui_elements/decorators/meta_data_list.haml
+++ b/app/ui_elements/decorators/meta_data_list.haml
@@ -31,7 +31,7 @@
           - key = dat.context_key
 
         - url = meta_datum.url
-        - is_editable = meta_datum.policy(current_user).edit?
+        - is_editable = meta_datum.policy_for(current_user).edit?
 
         - type = key.try(:value_type) || key.meta_key.value_type
         -# -# TMP for edit POC. text only!
