--- a/app/assets/stylesheets/components/_ui-autocomplete.sass
+++ b/app/assets/stylesheets/components/_ui-autocomplete.sass
@@ -68,3 +68,8 @@
 .ui-autocomplete-disabled
   color: $mono-mid
   font-style: italic
+
+// Override .ui-autocomplete to make the dropdown as big as needed.
+.ui-autocomplete-open-width
+  max-width: none
+  width: auto !important
