fix: style: consistent font rendering (webkit)
with the default value 'auto', we get a mixture of antialiased and subpixel-antialiased!
sometimes even in the same page,
in some places even when just changing window size.

--- a/app/assets/stylesheets/general/_typography.sass
+++ b/app/assets/stylesheets/general/_typography.sass
@@ -9,6 +9,10 @@ body
   font-size: $font-m
   line-height: $line-height-m
 
+body, body *
+  // force webkit to apply consistent font rendering, choose the most readable option
+  -webkit-font-smoothing: subpixel-antialiased
+
 p,
 h1, h2, h3, h4, h5, h6
   color: $mono-dark
