feat: release info: deploy and dev info, all releases
+ some fixes, test, integration test

--- a/app/assets/stylesheets/markdown.sass
+++ b/app/assets/stylesheets/markdown.sass
@@ -1,18 +1,13 @@
 .ui-markdown
-  padding-top: 0px
-  padding-bottom: 150px
 
-.ui-markdown h1
-  font-size: 32px
-  margin-top: 20px
-  margin-bottom: 20px
+  h1, h2, h3, h3, h4, h5, h6
+    line-height: 2em
 
-.ui-markdown h2
-  font-size: 24px
-  margin-top: 20px
-  margin-bottom: 10px
+  h1
+    font-size: 1.5em
 
-.ui-markdown h3
-  font-size: 18px
-  margin-top: 10px
-  margin-bottom: 5px
+  h2
+    font-size: 1.34em
+
+  h3
+    font-size: 1.2em
