--- a/app/ui_elements/combos/footer.haml
+++ b/app/ui_elements/combos/footer.haml
@@ -12,13 +12,10 @@
 
   - if defined?(copy)
     .ui-footer-copy
-      -# - if copy[:logo].is_a?(Hash)
-      -#   = component('link', href: copy[:logo][:link]) do
-      -#     = copy[:logo][:content]
-
-      %b{style: "font-weight: 600;font-family: \"Open Sans\";font-size: 16px;"}
-        = "Madek"
-      = version
+      %a{href: '/release'}
+        %b{style: "font-weight: 600;font-family: \"Open Sans\";font-size: 16px; color: #f3f3f3"}
+          = "Madek"
+        = version
 
       = " — "
       = copy[:text]
