refactor: build version name in initializer

--- a/app/ui_elements/combos/footer.haml
+++ b/app/ui_elements/combos/footer.haml
@@ -15,7 +15,8 @@
       %a{href: '/release'}
         %b{style: "font-weight: 600;font-family: \"Open Sans\";font-size: 16px; color: #f3f3f3"}
           = "Madek"
-        = version
+        %span.version
+          = version_name
 
       = " — "
       = copy[:text]
