fix: view: collection highlights preview display
- use optimal image sizes (browser chooses best version)
- set sizes on image to avoid layout changes while loading
- fix tile styles

--- a/app/assets/stylesheets/combos/_ui-resources-tiles.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-tiles.sass
@@ -47,7 +47,7 @@
     padding-bottom: 0
 
   .ui-tile__image
-    +dimension(100%,auto)
+    +dimension(100%, auto)
 
   &.large
     .ui-resources-page-items
@@ -91,19 +91,19 @@
 
   .ui-tile
     .ui-tile__image
-      +dimension(auto, 200px)
+      height: 200px
 
   &.small
     height: 210px
     .ui-tile
       .ui-tile__image
-        +dimension(auto, 125px)
+        height: 125px
 
   &.large
     height: 385px
     .ui-tile
       .ui-tile__image
-        +dimension(auto, 300px)
+        height: 300px
 /* Layout switching
  *-----------------------------------------
 
