feat: view: MediaEntry: add Open Graph protocol
- app/site metadata
- maps some core metadata from entry
- add previews as media
- also twitter cards (just setting the type)

--- a/app/views/media_entries/_show/_oembed_discovery_links.haml
+++ b/app/views/media_entries/_show/_oembed_discovery_links.haml
@@ -1,4 +1,6 @@
 :ruby
+  return unless Madek::Constants::Webapp::ENABLE_OPENGRAPH
+
   # only for supported types
   return unless Madek::Constants::Webapp::EMBED_SUPPORTED_MEDIA.include?(@get.media_type)
 
