feature: transfer responsibility

--- a/app/assets/stylesheets/components/_ui-autocomplete.sass
+++ b/app/assets/stylesheets/components/_ui-autocomplete.sass
@@ -73,3 +73,6 @@
 .ui-autocomplete-open-width
   max-width: none
   width: auto !important
+
+.ui-autocomplete-position-relative
+  position: relative !important
