fix: bundle: mark assets that depend on externals
sprocket:
- 1 import to import the assets
- 1 app-configuration to also bundle it
… is not enough!

of course we need more config to model the dependency graph by hand 👌

--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -1,3 +1,4 @@
+
 // custom icon font from own assets
 @import "../fonts/madek-icon-font/style";
 
@@ -17,7 +18,7 @@
 @import "../../../node_modules/font-awesome/scss/core";
 @import "../../../node_modules/font-awesome/scss/icons";
 @import "../../../node_modules/font-awesome/scss/screen-reader";
-
+//= depend_on_asset '../../../node_modules/font-awesome/scss/'
 
 // Main font: Open Sans
 @font-face {
