--- a/app/assets/stylesheets/components/_ui-datepicker.sass
+++ b/app/assets/stylesheets/components/_ui-datepicker.sass
@@ -1,5 +1,6 @@
 // base styles from component
 @import "../../../node_modules/react-day-picker/lib/style"
+//= depend_on_asset '../../../node_modules/react-day-picker/lib/style'
 
 .ui-datepicker
   z-index: 1000
