--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -114,6 +114,7 @@
 @import combos/ui-clipboard
 @import combos/ui-collage
 @import combos/ui-confirmation-dialog
+@import combos/ui-embedded-media
 @import combos/ui-featured-entries
 @import combos/ui-filterbar
 @import combos/ui-footer
