fix: meta data listing layout and texts

--- a/app/views/media_entries/more_data.html.haml
+++ b/app/views/media_entries/more_data.html.haml
@@ -1,10 +1,10 @@
 - tag_mods = ['small','ellipsed']
 - content_for(:overview) do
 
-  .col2of3
-    .ui-container.plm
-      %h3.title-l.separated.mbm= t(:media_entry_all_metadata_title)
-      = react('Deco.MetaDataByListing', list: @get.meta_data.by_vocabulary)
+  .ui-container
+    %h3.title-l.mbl
+      = t(:media_entry_all_metadata_title)
+    = react('Deco.MetaDataByListing', list: @get.meta_data.by_vocabulary, hideSeparator: true)
 
 
 = render template: 'media_entries/_show/_base'
