--- a/app/assets/stylesheets/general/_tables.sass
+++ b/app/assets/stylesheets/general/_tables.sass
@@ -31,6 +31,7 @@ td, th
   border-bottom: 1px solid $mono-bright
   line-height: $line-height-l
   padding: $space-x 0
+  // FIXME: WTF??? why?
   vertical-align: top
 
 .ui-container.midtone
