fix: controller: cleanup MediaEntry embed
- only support videos, give correct error
- remove https-hacks (not needed anymore, `request.base_url` is correct)

--- a/app/views/media_entries/_show/_oembed_discovery_links.haml
+++ b/app/views/media_entries/_show/_oembed_discovery_links.haml
@@ -3,10 +3,8 @@
   return unless @get.media_type == 'video'
 
   # NOTE: according to the spec, relative links would be enough,
-  # but the wordpress clients nly understand absolute URLs (incl. scheme and host)
-  full_url = URI.parse(request.base_url)
-    .merge(oembed_path(url: @get.url))
-    .tap {|u| u.scheme = 'https'}.to_s
+  # but the wordpress client only understands absolute URLs (incl. scheme and host)
+  full_url = URI.parse(request.base_url).merge(oembed_path(url: @get.url)).to_s
 
   props = {
     rel: 'alternate',
