--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -164,7 +164,7 @@
 @import uberadmin
 @import video-js
 @import markdown
-
+@import _embedded
 /*-----------------------------------------
  *-----------------------------------------
 
@@ -226,15 +226,3 @@ img, img.ui-thumbnail-image
   #ui-resources-preview
     height: 300px
     overflow: auto
-
-
-// embedded view
-body[data-r="media_entries"][data-a="embedded"]
-  background: transparent
-  overflow: hidden
-  top: 0
-  margin: 0
-  padding: 0
-  height: 100%
-  width: 100%
-  min-width: initial
