feat: ui: enhance MediaEntry embed & preview
- adjust styles and usage on MediaEntry#show
- tiles fixes
- correctly calculate sizes for embedded player
- specs with real media(!)

--- a/app/assets/stylesheets/combos/_ui-media-overview.sass
+++ b/app/assets/stylesheets/combos/_ui-media-overview.sass
@@ -25,7 +25,8 @@
   padding-left: $space-l
   position: relative
   min-height: 500px
-
-.ui-media-overview-preview .ui-media-overview-preview-item
-  display: inline-block
   max-width: 500px
+
+// .ui-media-overview-preview .ui-media-overview-preview-item
+//   display: inline-block
+//   max-width: 500px
