--- a/app/assets/stylesheets/_video-js.scss
+++ b/app/assets/stylesheets/_video-js.scss
@@ -11,9 +11,15 @@
 //= depend_on_asset '../../../node_modules/videojs-resolution-switcher/lib/videojs-resolution-switcher'
 
 // default sizing:
-.video-js { width: 300px; height: 150px; }
-.vjs-fluid { padding-top: 56.25% } // 16:9 aspect ratio
+.video-js {
+  width: 100%;
+  // height: 150px;
+  // width: 300px;
 
+  &.vjs-fluid {
+    padding-top: 56.25%;  // 16:9 aspect ratio
+  }
+}
 // default fullscreen sizing:
 // see <https://docs.brightcove.com/en/perform/brightcove-player/guides/sizing-the-player.html#fullscreen>
 body.vjs-full-window {
