feature: clipboard collection

--- a/app/assets/stylesheets/combos/_ui-resources-grid.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-grid.sass
@@ -109,3 +109,29 @@
     .ui-thumbnail.video .ui-thumbnail-image-wrapper
       background: $white image-url("backgrounds/thumb-video-backg@2x.png") 0 0px no-repeat
       background-size: 138px 138px
+
+
+// .ui-resources.grid
+//   .ui-bubbles
+//     position: absolute
+//     z-index: 9
+//     width: 10px
+//     right: 5px
+//     top: 8px
+//
+//   .ui-bubble
+//     float: right
+//     position: static
+//     height: 22px
+//     margin: 0px
+//     margin-bottom: 5px
+//     padding: 0px 10px
+//     color: #333
+//     z-index: 9
+//     background-color: #444
+//     text-align: center
+//     font-weight: bold
+//     border-radius: 10px
+//
+//   .ui-bubble:hover
+//     box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.5)
