--- a/app/assets/stylesheets/combos/_ui-resources-miniature.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-miniature.sass
@@ -124,3 +124,30 @@
     .ui_media-type-icon
       font-size: 20px
       top: 8px
+
+
+// .ui-resources.miniature
+//   .ui-bubbles
+//     position: absolute
+//     z-index: 9
+//     width: 10px
+//     right: 5px
+//     top: 5px
+//
+//   .ui-bubble
+//     float: right
+//     position: static
+//     height: 14px
+//     margin: 0px
+//     margin-bottom: 3px
+//     padding: 0px 5px
+//     color: #333
+//     z-index: 9
+//     background-color: #444
+//     text-align: center
+//     font-weight: bold
+//     border-radius: 10px
+//     font-size: 8px
+//
+//   .ui-bubble:hover
+//     box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.5)
