--- a/app/assets/stylesheets/_video-js.scss
+++ b/app/assets/stylesheets/_video-js.scss
@@ -174,6 +174,8 @@ $slider-bg-color: lighten($primary-background-color, 33.34%);
 // plugins
 .vjs-resolution-button {
 
+  color: inherit;
+
   // .vjs-menu .vjs-menu-content {
   //   width: 3em;
   // }
