feat: Embed Player: support audio and images
refactor embed view to re-use the same Preview component as the MediaEntry show, so all cases are already handled.

preview is now ore configurable: self-link and zoom-link can be disabled,
so the embedded version can link to the entry itself.

solve remaining display problems by
- setting a default size for media of unknown size (image previews from images)
- embed-view takes only absolute size args –> either oEmbed or other client has to calculate optimal sizes for "maximum" size args
- throwing CSS on it

--- a/app/assets/stylesheets/_video-js.scss
+++ b/app/assets/stylesheets/_video-js.scss
@@ -37,6 +37,8 @@ body.vjs-full-window {
     right: 0;
     width: 100% !important;
     height: 100% !important;
+    max-width: initial !important;
+    max-height: initial !important;
   }
   .video-js:-webkit-full-screen {
     width: 100% !important;
