--- a/app/views/media_entries/_show/_base_tmp_react.haml
+++ b/app/views/media_entries/_show/_base_tmp_react.haml
@@ -2,7 +2,11 @@
 
 :ruby
   unless @get.published?
-    content_for(:top_notice) { render('media_entries/_show/unpublished_header') }
+    if not flash.to_hash.present?
+      content_for(:app_alerts) do
+        component('alert', level: 'warning', text: t(:media_entry_not_published_warning_msg))
+      end
+    end
   end
 
   unless content_for?(:header)
@@ -13,16 +17,12 @@
     content_for(:tabs) { render('media_entries/_show/tab_nav') }
   end
 
-  top_notice = content_for(:top_notice)
   header = content_for(:header)
   tabs = content_for(:tabs)
   main = content_for(:main)
 
 
 .app-body-ui-container
-
-  - if top_notice.present?
-    = top_notice
 
   = header
 
