--- a/app/views/application/_app_alerts.haml
+++ b/app/views/application/_app_alerts.haml
@@ -8,6 +8,29 @@
     { level: levels_map[level.to_sym] || level, text: text}
   end
 
+  if controller.class.name == 'MediaEntriesController' && [
+      'relation_parents',
+      'relation_siblings',
+      'relations',
+      'show',
+      'more_data',
+      'permissions',
+      'usage_data',
+      'ask_delete',
+      'export',
+      'select_collection'
+    ].include?(controller.action_name)
+
+    unless @get.published?
+      if not flash.to_hash.present?
+        content_for(:app_alerts) do
+          component('alert', level: 'warning', text: t(:media_entry_not_published_warning_msg))
+        end
+      end
+    end
+
+  end
+
 
 - if alerts.present? or content_for?(:app_alerts)
   = combo('alerts', props: { id: 'app-alerts' }, list: alerts) do
