feat: dashboard: async section has retry button with fallback link
better UX in case of server or network errors

--- a/app/views/my/_section_media_resources.html.erb
+++ b/app/views/my/_section_media_resources.html.erb
@@ -29,6 +29,7 @@ else
     url: my_dashboard_path(section[:id], format: :json) +
           '?___sparse={"' + section[:id].to_s + '":{}}',
     json_path: section[:id].to_s,
+    fallback_url: my_dashboard_section_path(section[:id]),
     initial_props: {
       mods: mods,
       withBox: with_box,
