package: add tachyons css

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -169,6 +169,7 @@
 /*-----------------------------------------
  *-----------------------------------------
 
+@import tachyons
 
 /* App custumizations
  *-----------------------------------------
