--- a/app/views/errors/client_error.haml
+++ b/app/views/errors/client_error.haml
@@ -12,10 +12,11 @@
 
       .ui-modal-body.by-center
         .row
-          -# TODO: separate templates for 401/405, 404, …
           - if (@get.status_code == 401) or (@get.status_code == 405)
             .ui-container{style: 'max-width: 440px;margin:0 auto;'}
-              = render(partial: 'login_box')
+              = react('App.LoginMenu',
+                  get: @get,
+                  loginProviders: @app_layout_data.login_providers)
 
           - else
             .bang.col1of6
