refactor: select collection

--- a/app/views/media_entries/_show/_resource_header.haml
+++ b/app/views/media_entries/_show/_resource_header.haml
@@ -1,1 +1,1 @@
-= react('Views.MediaEntryHeader', { get: @get.header, showModal: false, async: true, modalAction: 'select_collection' })
+= react('Views.MediaEntryHeaderWithModal', { get: @get })
