fix: dashboard: clipboard always in menu, fallback message

--- a/app/views/my/_section_media_resources.html.erb
+++ b/app/views/my/_section_media_resources.html.erb
@@ -2,6 +2,9 @@
 
 mods = []
 is_main = (true if params[:action] != 'dashboard_section')
+is_clipboard = section[:id] == :clipboard
+ui_component = !is_clipboard ? 'Deco.MediaResourcesBox' : 'Views.My.ClipboardBox'
+
 # HACK: toggle box via prop…
 with_box = (true if !is_main)
 mods << ['rounded-right', { bordered: false }] if !is_main
@@ -12,18 +15,18 @@ fallback = section[:is_empty?] ? true : false
 render_async = (is_main && section[:render_async?]) or false
 
 if !render_async
-  react('Deco.MediaResourcesBox',
+  react(ui_component,
       get: @get.send(section[:id]),
       mods: mods,
       withBox: with_box,
       fallback: fallback,
-      initial: { show_filter: false, is_clipboard: section[:id] == :clipboard },
+      initial: { show_filter: false, is_clipboard: is_clipboard },
       draftsView: section[:id] == :unpublished_entries)
 
 else
   react(
     'AsyncDashboardSection',
-    component: 'Deco.MediaResourcesBox',
+    component: ui_component,
     # NOTE: we don't want to fetch the actual subsection, which has diff. content.
     #       instead, we use the 'sparse request', to just fetch what we need.
     url: my_dashboard_path(section[:id], format: :json) +
@@ -34,7 +37,7 @@ else
       mods: mods,
       withBox: with_box,
       fallback: fallback,
-      initial: { show_filter: false, is_clipboard: section[:id] == :clipboard }})
+      initial: { show_filter: false, is_clipboard: is_clipboard }})
 end
 
   %>
