--- a/app/ui_elements/decorators/privacy-status-icon.haml
+++ b/app/ui_elements/decorators/privacy-status-icon.haml
@@ -1,11 +1,1 @@
-:ruby
-  status = defined?(get) && get.privacy_status
-  throw 'ui: no privacy status!' unless status.present?
-
-  icon_map = {
-    public: 'open',
-    shared: 'group',
-    private: 'private'
-  }
-
-= component('icon', "icon-privacy-#{icon_map[status]}")
+= react('Views.MediaEntryPrivacyStatusIcon', { get: @get })
