--- a/app/views/media_entries/_show/_tab_nav.haml
+++ b/app/views/media_entries/_show/_tab_nav.haml
@@ -1,19 +1,1 @@
-:ruby
-  tabs = @get.tabs.map do |tab|
-    path = tab[:action] ? send("#{tab[:action]}_media_entry_path") : media_entry_path
-
-    icon = case tab[:icon_type]
-           when :privacy_status_icon
-             deco('privacy-status-icon', get: @get)
-           end
-
-    [path, tab.merge(icon: icon)]
-  end.to_h
-
-
-%ul.ui-tabs.large
-  - tabs.each do |path, tab|
-    %li.ui-tabs-item{class: link_active?(path, deep: true) ? 'active' : nil}
-      %a{href: path}
-        = tab[:icon]
-        = tab[:title]
+= react('Views.MediaEntryTabs', { get: @get })
