--- a/app/views/meta_data/edit.html.haml
+++ b/app/views/meta_data/edit.html.haml
@@ -1,5 +1,5 @@
 :ruby
-  content_for(:header) do
+  content_for(:meta_data_header) do
     component('page-header', icon: '▲', text: 'MetaDatum > Edit')
   end
 
@@ -21,7 +21,7 @@
       "(UUID of #{@get.type.demodulize.singularize})"
     end
 
-- content_for(:overview) do
+- content_for(:meta_data_overview) do
   .ui-container.table
     .app-body-sidebar.ui-container.table-cell.table-side
       .ui-resources.grid
@@ -50,4 +50,4 @@
                               class: :block, placeholder: placeholder_text)
 
 
-= render template: 'layouts/app_resource'
+= render template: 'meta_data/meta_data_app_resource'
