--- a/app/views/media_entries/_show/_base_tmp_react.haml
+++ b/app/views/media_entries/_show/_base_tmp_react.haml
@@ -7,16 +7,11 @@
     content_for(:top_notice) { render('media_entries/_show/unpublished_header') }
   end
 
-  unless content_for?(:header)
-    content_for(:header) { react('Views.MediaEntryHeaderWithModal', { get: @get }) }
-  end
-
   unless content_for(:tabs)
     content_for(:tabs) { react('Views.MediaEntryTabs', { get: @get }) }
   end
 
   top_notice = content_for(:top_notice)
-  header = content_for(:header)
   tabs = content_for(:tabs)
   main = content_for(:main)
 
@@ -26,7 +21,7 @@
   - if top_notice.present?
     = top_notice
 
-  = header
+  = react('Views.MediaEntryHeaderWithModal', { get: @get })
 
   = tabs
 
